feat(employee): synchronize walk-in booking and queue flow